# reality_scraper

./: .pre-commit-config.yaml  config.py  main.py  pyproject.toml  run.py  run_scheduled.py  test and dev.ipynb
db_managment/: data_manager.py
scraper/: scraper.py
utils/: logger.py  mailing.py  utils.py
