[project]
name = "reality-scraper"
version = "0.1.0"
description = "Scraper and analyze data from sreality.cz"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datetime>=6.0",
    "db-sqlite3>=0.0.1",
    "geopy>=2.4.1",
    "ipykernel>=7.2.0",
    "pandas>=3.0.1",
    "pre-commit>=4.5.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "scheduler>=0.8.11",
    "tqdm>=4.67.3",
    "typing>=3.10.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
    "ty>=0.0.19",
]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "D203",
    "D212",
]
